staff -> adding password encryption

--- a/views/admin/staff/new.ejs
+++ b/views/admin/staff/new.ejs
@@ -20,7 +20,7 @@
 			<td class="td_spacing"><input id="password" type="password" class="form-control" placeholder="Password" name="password" /></td>			
 		</tr>
 		<tr>
-			<td class="td_spacing"><input type="password" class="form-control" placeholder="Password confirmation" name="password_confirmation" /></td>			
+			<td class="td_spacing"><input type="password" class="form-control" placeholder="Password confirmation" name="passwordConfirmation" /></td>			
 		</tr>		
 		<tr>
 			<td class="td_spacing text-center">
