--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,13 +38,34 @@
 
   <body>
   
+  
   <div class="navbar navbar-inverse">
 			<div class="container">
+			<ul>
+			
 				<a class="navbar-brand" href="/">Home</a>
+				<li class="dropdown">
+					<a href="#" data-toggle="dropdown" class="navbar-brand dropdown-toggle">Staff <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li class="dropdown">
+							<a href="/admin/staff/new">add</a>
+						</li>
+						<li class="divider"></li>
+						<li class="dropdown">
+							<a href="/admin/staff/:id/edit">edit</a>
+						</li>					
+						<li class="divider"></li>
+						<li class="dropdown">
+							<a href="/admin/staff/:id/delete">delete</a>
+						</li>					
+					</ul>
+				</li>				
+			
 				<% if (!req.session.current_user) { %>
 				<a class="navbar-brand pull-right" href="/login">Login</a>
 				<a class="navbar-brand pull-right" href="/userexamples/new">Sign-up</a>
 				<% } %>
+			</ul>
 			</div>
 		</div>
 
