--- a/.tmp/public/styles/application.css
+++ b/.tmp/public/styles/application.css
@@ -1,12 +1,26 @@
-
 .title {
-   margin-left: 2em;    
-  }
+	margin-left: 2em;
+}
 
 .form_left_margin {
-	margin-left: 4em;    
-  }
-  
+	margin-left: 4em;
+}
+
 .td_spacing {
-    padding-bottom: 0.5em;    
-  }
+	padding-bottom: 0.5em;
+}
+
+/* STAY DOWN MDFKR!! */
+#footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 50px; /* Height of the footer */
+	background: darkgreen;
+	padding-top: 0.5em;
+}
+
+.btn-img {
+	height: 30px;
+	width: 30px;
+}
