--- a/views/admin/staff/index.ejs
+++ b/views/admin/staff/index.ejs
@@ -1,2 +1,34 @@
+<div class="page-header">
+	<h2 style="padding-left: 2em;">Staff members</h2>
+</div>
 
-dobri ste momci
+<div class="container">
+	<div class="row">
+		<div class="col-md-8 table-responsive">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>First name</th>
+						<th>Last name</th>
+						<th>Email</th>
+						<th>Actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% staffMembers.forEach(function(member){ %>
+					<tr>
+						<td><%- link_to(member.firstName, "/admin/staff/" + member.id ) %></td>
+						<td><%= member.lastName %></td>
+						<td><%= member.email %></td>
+						<td>
+							<%- link_to_if(true, "Delete", "/admin/staff/" + member.id, {method : "delete", class: "btn btn-sm btn-danger"}) %>
+						    <%- link_to_if(true, "Edit", "/admin/staff/" + member.id, {class: "btn btn-sm btn-warning"}) %>
+						</td>
+					</tr>
+					<% }); %>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
+
