--- a/.tmp/public/styles/application.css
+++ b/.tmp/public/styles/application.css
@@ -12,7 +12,7 @@
 
 /* STAY DOWN MDFKR!! */
 #footer {
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 	width: 100%;
 	height: 50px; /* Height of the footer */
