--- a/.tmp/public/styles/application.css
+++ b/.tmp/public/styles/application.css
@@ -11,16 +11,36 @@
 }
 
 /* STAY DOWN MDFKR!! */
-#footer {
-	position: fixed;
-	bottom: 0;
+
+html, body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+#mainContainer {
+	min-height: 100%;
+	position: relative;
+}
+#header {
+	padding: 0px;
+	background: #5ee;
+}
+#content {
+	padding: 10px;
+	padding-bottom: 70px; /* Height of the footer element */
+}
+#footer {	
+	margin: 7em -2em -5em 0em;
 	width: 100%;
-	height: 50px; /* Height of the footer */
+	height: 50px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
 	background: darkgreen;
-	padding-top: 0.5em;
 }
 
 .btn-img {
-	height: 30px;
-	width: 30px;
+	margin-top: 0.5em;
+	height: 32px;
+	width: 32px;
 }
