--- a/views/admin/staff/new.ejs
+++ b/views/admin/staff/new.ejs
@@ -50,8 +50,8 @@
 					</div>
 
 					<div class="form-group col-md-6 col-sm-6">
-						<label for="birthDate">Birth Date:</label>
-						<input id="birthDate" type="date" class="form-control" placeholder="Birth date (format: YYYY-mm-dd)" name="birthDate" />
+						<label for="DPbirthDate">Birth Date:</label>
+						<input id="DPbirthDate" type="date" class="form-control" placeholder="Birth date (format: (YYYY-mm-dd)" name="birthDate" />
 					</div>
 
 					<div class="form-group col-md-6 col-sm-6">
@@ -109,21 +109,19 @@
 					</div>
 
 					<div class="form-group col-md-6 col-sm-6">
-						<label for="hireDate">Hire date:</label>
-						<input id="hireDate" type="date" class="form-control" placeholder="Hire date (format: YYYY-mm-dd)" name="hireDate" />
+						<label for="DPhireDate">Hire date:</label>
+						<input id="DPhireDate" type="date" class="form-control" placeholder="Hire date (format: YYYY-mm-dd)" name="hireDate" />
 					</div>
 				</div>
 			</div>
 			<br/>
 			<br/>
 
-			<div class="form-group col-sm-6">
+			<div class="form-group col-md-12 col-sm-12">
 				<input type="submit" class="btn btn-sm btn-success" value="Create member" />
 			</div>
-
 		</div>
 	</div>
-
 	<input type="hidden" name="_csrf" value="<%= _csrf %>" />
 
 </form>
