fixing menu UI, add staff member completed

--- a/views/admin/staff/new.ejs
+++ b/views/admin/staff/new.ejs
@@ -101,7 +101,7 @@
 					</div>
 					<div class="form-group col-md-6 col-sm-6">
 						<label for="salary">Salary:</label>
-						<input id="salary" type="number" class="form-control" min="0" max="100000" step="5" placeholder="Salary" name="salary" />
+						<input id="salary" type="number" class="form-control" step="5" placeholder="Salary (format: whole or decimal number)" name="salary" />
 					</div>
 					<div class="form-group col-md-6 col-sm-6">
 						<label for="isAdmin">Is admin:</label>
