--- a/.tmp/public/styles/application.css
+++ b/.tmp/public/styles/application.css
@@ -23,13 +23,12 @@ html, body {
 }
 #header {
 	padding: 0px;
-	background: #5ee;
 }
 #content {
 	padding: 10px;
 	padding-bottom: 70px; /* Height of the footer element */
 }
-#footer {	
+#footer {
 	margin: 7em -2em -5em 0em;
 	width: 100%;
 	height: 50px;
@@ -43,4 +42,18 @@ html, body {
 	margin-top: 0.5em;
 	height: 32px;
 	width: 32px;
+}
+
+/* overriding jquery-validate class */
+.error {
+	color: red;
+	font-size: 12px;
+}
+
+.form-control.error {
+    color: black;    
+  }
+
+#flash_messages {
+	padding-left: 22em;
 }
