--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,7 @@
 <script src="/js/jQuery/jquery-ui.js"></script>
 <script src="/js/jQuery/jquery.validate.min.js"></script>
 <script src="/js/bootstrap/bootstrap.js"></script>
+<script src="/js/deleteStaff.js"></script>
 <script src="/js/newStaff.js"></script>
 <script src="/js/newStaffValidation.js"></script>
 <!--SCRIPTS END-->
