--- a/views/admin/staff/new.ejs
+++ b/views/admin/staff/new.ejs
@@ -122,6 +122,6 @@
 			</div>
 		</div>
 	</div>
-	<input type="hidden" name="_csrf" value="<%= _csrf %>" />
+	<input id="csrf" type="hidden" name="_csrf" value="<%= _csrf %>" />
 
 </form>
