view staff member functionality + new genericError view

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,6 +25,7 @@
 <script src="/js/deleteStaff.js"></script>
 <script src="/js/newStaff.js"></script>
 <script src="/js/newStaffValidation.js"></script>
+<script src="/js/showStaffMember.js"></script>
 <!--SCRIPTS END-->
 
 	</head>
