edit/update functionalities added

--- a/views/admin/staff/show.ejs
+++ b/views/admin/staff/show.ejs
@@ -1,5 +1,5 @@
 <div class="title">
-	<h2 class="form-signin-heading">Staff member :: <strong><%= member == "" ? "" : member.firstName + " " + member.lastName %></strong></h2>
+	<h2 class="form-signin-heading">Staff member :: <strong><%= member.firstName + " " + member.lastName %></strong></h2>
 </div>
 <br/>
 <br/>
