--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,10 +22,11 @@
 <script src="/js/jQuery/jquery-ui.js"></script>
 <script src="/js/jQuery/jquery.validate.min.js"></script>
 <script src="/js/bootstrap/bootstrap.js"></script>
-<script src="/js/deleteStaff.js"></script>
-<script src="/js/newStaff.js"></script>
-<script src="/js/newStaffValidation.js"></script>
-<script src="/js/showStaffMember.js"></script>
+<script src="/js/staff/deleteStaff.js"></script>
+<script src="/js/staff/editStaff.js"></script>
+<script src="/js/staff/newStaff.js"></script>
+<script src="/js/staff/newStaffValidation.js"></script>
+<script src="/js/staff/showStaffMember.js"></script>
 <!--SCRIPTS END-->
 
 	</head>
