--- a/views/admin/staff/edit.ejs
+++ b/views/admin/staff/edit.ejs
@@ -40,16 +40,6 @@
 					</div>
 
 					<div class="form-group col-md-6 col-sm-6">
-						<label for="password">Password:</label>						
-						<%- password_field_tag("password", "",  {class:"form-control", placeholder:"Password", name:"Password"}) %>
-					</div>
-
-					<div class="form-group col-md-6 col-sm-6">
-						<label for="passwordConfirmation">Password confirmation:</label>
-						<%- password_field_tag("passwordConfirmation", "",  {class:"form-control", placeholder:"Password confirmation", name:"passwordConfirmation"}) %>
-					</div>
-
-					<div class="form-group col-md-6 col-sm-6">
 						<label for="DPbirthDate">Birth Date:</label>
 						<input id="DPbirthDate" type="date" class="form-control" placeholder="Birth date (format: (YYYY-mm-dd)" name="birthDate" />
 					</div>
@@ -119,6 +109,7 @@
 
 			<div class="form-group col-md-12 col-sm-12">
 				<input type="submit" class="btn btn-sm btn-success" value="Update member" />
+				<%- link_to_if(true, "Back", "/admin/staff", {class: "btn btn-sm btn-primary"}) %>
 			</div>
 		</div>
 	</div>
