--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -51,6 +51,10 @@
 									<li class="dropdown">
 										<a href="/admin/staff/new">New staff member</a>
 									</li>
+									<li class="divider"></li>
+									<li class="dropdown">
+										<a href="/admin/staff/search">Search staff</a>
+									</li>
 								</ul>
 							</li>
 						</ul>
