staff searching implemented

--- a/views/admin/staff/edit.ejs
+++ b/views/admin/staff/edit.ejs
@@ -109,7 +109,7 @@
 
 			<div class="form-group col-md-12 col-sm-12">
 				<input type="submit" class="btn btn-sm btn-success" value="Update member" />
-				<%- link_to_if(true, "Back", "/admin/staff", {class: "btn btn-sm btn-primary"}) %>
+				<%- link_to_if(true, "Back", "/admin/staff/index", {class: "btn btn-sm btn-primary"}) %>
 			</div>
 		</div>
 	</div>
