--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,6 +26,7 @@
 <script src="/js/staff/editStaff.js"></script>
 <script src="/js/staff/newStaff.js"></script>
 <script src="/js/staff/newStaffValidation.js"></script>
+<script src="/js/staff/searchStaff.js"></script>
 <script src="/js/staff/showStaffMember.js"></script>
 <!--SCRIPTS END-->
 
@@ -45,7 +46,7 @@
 								<a href="#" data-toggle="dropdown" class="dropdown-toggle">Staff <b class="caret"></b></a>
 								<ul class="dropdown-menu">
 									<li class="dropdown">
-										<a href="/admin/staff">All</a>
+										<a href="/admin/staff/index">All</a>
 									</li>
 									<li class="divider"></li>
 									<li class="dropdown">
