--- a/views/admin/staff/show.ejs
+++ b/views/admin/staff/show.ejs
@@ -110,7 +110,7 @@
 			<br/>
 
 			<div class="form-group col-md-12 col-sm-12">
-				<%- link_to_if(true, "Back", "/admin/staff", {class: "btn btn-sm btn-primary"}) %>
+				<%- link_to_if(true, "Back", "/admin/staff/index", {class: "btn btn-sm btn-primary"}) %>
 			</div>
 		</div>
 	</div>
