--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,8 @@
 <script src="/js/jQuery/jquery-ui.js"></script>
 <script src="/js/jQuery/jquery.validate.min.js"></script>
 <script src="/js/bootstrap/bootstrap.js"></script>
+<script src="/js/cities/citiesValidation.js"></script>
+<script src="/js/cities/deleteCity.js"></script>
 <script src="/js/staff/deleteStaff.js"></script>
 <script src="/js/staff/editStaff.js"></script>
 <script src="/js/staff/newStaff.js"></script>
