--- a/views/admin/staff/index.ejs
+++ b/views/admin/staff/index.ejs
@@ -1,8 +1,9 @@
-<% if (staffMembers.length > 0) {%>
+
 <div class="page-header">
 	<h2 style="padding-left: 2em;">Staff members</h2>
 </div>
 
+<% if (staffMembers.length > 0) {%>
 <div class="container">
 	<div class="row">
 		<div class="col-md-8 table-responsive">
@@ -21,7 +22,10 @@
 						<td><%- link_to(member.firstName + " " + member.lastName, "/admin/staff/" + member.id + "/details") %></td>
 						<td><%= member.email %></td>
 						<td><%= member.isAdmin ? "Yes" : "No" %></td>
-						<td> <%- link_to_if(true, "Edit", "/admin/staff/" + member.id + "/edit", {class: "btn btn-sm btn-warning"}) %> <a id="deleteStaffMember" data-member=<%=member.id %> class="btn btn-sm btn-danger">Delete</a></td>
+						<td> 
+							<%- link_to_if(true, "Edit", "/admin/staff/" + member.id + "/edit", {class: "btn btn-sm btn-warning"}) %> 
+							<a id="deleteStaffMember" data-member=<%=member.id %> class="btn btn-sm btn-danger">Delete</a>
+						</td>
 					</tr>
 					<% }); %>
 				</tbody>
