--- a/views/admin/staff/search.ejs
+++ b/views/admin/staff/search.ejs
@@ -4,6 +4,19 @@
 
 <div class="row">
 	<div class="col-md-8 col-lg-offset-1">
+		<div class="form-group col-md-6 col-sm-6">
+			Apply filters
+			<input id="filter" type="checkbox" value="Apply filters" />
+		</div>
+		<div class="form-group col-md-6 col-sm-6">
+			
+			<%- select_tag("cities", 1, cities) %>
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-8 col-lg-offset-1">
 
 		<div class="form-group col-md-6 col-sm-6">
 			<input id="searchBox" type="text" placeholder="Search by name or email" class="form-control" />
@@ -21,7 +34,7 @@
 <div class="row">
 	<div class="col-md-8 col-lg-offset-1">
 		<div id="searchResults" class="form-group col-md-12 col-sm-12">
-			
+
 		</div>
 	</div>
 </div>
