movin cities to a better place

--- a/views/cities/edit.ejs
+++ b/views/cities/edit.ejs
@@ -3,7 +3,7 @@
 </div>
 <br/>
 
-<form action="/admin/cities/update" method="POST" class="form-signin">
+<form action="/cities/update" method="POST" class="form-signin">
 
 	<div clas="row">
 		<div class="col-md-8 col-md-offset-2">
@@ -13,7 +13,7 @@
 			</div>
 			<div class="form-group col-md-12 col-sm-12">
 				<input type="submit" class="btn btn-sm btn-success" value="Update city" />
-				<%- link_to_if(true, "Back", "/admin/cities/index", {class: "btn btn-sm btn-primary"}) %>
+				<%- link_to_if(true, "Back", "/cities/index", {class: "btn btn-sm btn-primary"}) %>
 			</div>
 
 		</div>
