--- a/views/admin/staff/new.ejs
+++ b/views/admin/staff/new.ejs
@@ -75,7 +75,7 @@
 
 					<div class="form-group col-md-6 col-sm-6">
 						<label for="city">City:</label>
-						<input id="city" type="text" class="form-control" placeholder="City" name="city" />
+						<%- select_tag("city", cities, { style:"width:15em;" }) %>
 					</div>
 					<div class="form-group col-md-6 col-sm-6">
 						<label for="country">Country:</label>
