--- a/views/admin/staff/search.ejs
+++ b/views/admin/staff/search.ejs
@@ -5,16 +5,25 @@
 <div class="row">
 	<div class="col-md-8 col-lg-offset-1">
 		<div class="form-group col-md-6 col-sm-6">
-			Apply filters
-			<input id="filter" type="checkbox" value="Apply filters" />
-		</div>
-		<div class="form-group col-md-6 col-sm-6">
-			
-			
+			<strong>Apply filters:</strong>
+			<input id="filter" type="checkbox" value="0" />
 		</div>
 	</div>
 </div>
 
+<div class="row">
+	<div class="col-md-8 col-lg-offset-1">
+		<div class="form-group col-md-6">
+			<label for="city"><i>City:</i></label>
+			<%- select_tag("city", cities, { style:"width:15em;" }) %>
+		</div>
+		<div class="form-group col-md-6">
+			<label for="adminDD"><i>Admin?:</i></label>
+			<%- select_tag("adminDD", adminSelect, { style:"width:15em;" }) %>
+		</div>
+	</div>
+</div>
+<br/><br/><br/>
 <div class="row">
 	<div class="col-md-8 col-lg-offset-1">
 
