--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,6 +24,8 @@
 <script src="/js/bootstrap/bootstrap.js"></script>
 <script src="/js/cities/citiesValidation.js"></script>
 <script src="/js/cities/deleteCity.js"></script>
+<script src="/js/countries/countriesValidation.js"></script>
+<script src="/js/countries/deleteCountry.js"></script>
 <script src="/js/staff/deleteStaff.js"></script>
 <script src="/js/staff/editStaff.js"></script>
 <script src="/js/staff/newStaff.js"></script>
