--- a/views/admin/staff/new.ejs
+++ b/views/admin/staff/new.ejs
@@ -79,7 +79,7 @@
 					</div>
 					<div class="form-group col-md-6 col-sm-6">
 						<label for="country">Country:</label>
-						<input id="country" type="text" class="form-control" placeholder="Country" name="country" />
+						<%- select_tag("country", countries, { style:"width:15em;" }) %>
 					</div>
 
 					<div class="form-group col-md-6 col-sm-6">
