--- a/views/admin/staff/show.ejs
+++ b/views/admin/staff/show.ejs
@@ -71,7 +71,7 @@
 					</div>
 					<div class="form-group col-md-6 col-sm-6">
 						<label>Country:</label>
-						<%= member.country %>
+						<%= member.country.countryName %>
 					</div>
 
 					<div class="form-group col-md-6 col-sm-6">
